Adding basic token based authentication
