# internal/dto/client.go
@@ -1,0 +1,6 @@
+package dto
+
+type ClientInput struct {
+	SecretKey string `json:"secretKey"`
+	AppKey    string `json:"appKey"`
+}
